# pyrus-sign-bot

./: README.md  pyproject.toml
pyrus_sign_bot/: main.py  settings.py
pyrus_sign_bot/services/: __init__.py  kontur_service.py
