[tool.poetry]
name = "pyrus-sign-bot"
version = "0.1.0"
description = ""
authors = ["Bogdan Zakharov <zaharovbogdan2005@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
requests = "^2.32.3"
pydantic-settings = "^2.8.1"
boto3 = "^1.37.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
